# conductor

./: .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.langfuse.yml  docker-compose.yml  projects.yaml  pyproject.toml
conductor/: config.py  git.py  main.py  observability.py  prompts.py
conductor/adapters/agents/: agent_impls.py  claude_agent.py
conductor/adapters/linear/: adapter.py  client.py  signature.py
conductor/adapters/project/: yaml_registry.py
conductor/adapters/telegram/: adapter.py
conductor/api/: webhook.py
conductor/core/: orchestrator.py
conductor/core/domain/: task.py
conductor/core/ports/: adapter_port.py  agent_port.py  llm_port.py  project_registry_port.py
conductor/prompt_templates/: deployer-agent@1.txt  developer-agent@1.txt  orchestrator-agent@1.txt  qa-agent@1.txt  qa-agent@2.txt  researcher-agent@1.txt
terraform/: cloud-init.yml.tpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/vps/: digitalocean.tf  hetzner.tf  outputs.tf  variables.tf
tests/: test_observability.py  test_prompts.py
tests/adapters/: test_agent_impls.py  test_linear_adapter.py  test_linear_client.py  test_mock_llm.py  test_project_registry.py  test_signature.py  test_telegram_adapter.py  test_webhook.py
tests/core/: test_orchestrator.py  test_orchestrator_tracing.py  test_ports.py  test_task.py
